--- a/html/bookshop/index.html
+++ b/html/bookshop/index.html
@@ -5,7 +5,7 @@
   <link href="favicon.png" rel="icon">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <meta name="theme-color" content="#000">
+  <meta name="theme-color" content="#ffcc66">
   <meta name="description" content="eBook">
   <title>Suggested Reading</title>
 </head>
@@ -67,7 +67,7 @@
     <img src="media/bookshop-5093170_1920.png" class="card-img-top" alt="Harry Potter">
     <div class="card-body">
       <h5 class="bookTitle">Harry Potter</h5>
-      <p class="card-text">All the Harry Potter Books in order of release, for your reading pleasure</p>
+      <p class="description">All the Harry Potter Books in order of release, for your reading pleasure</p>
     </div>
     <div class="card-footer">
       <button class="addbtn" onclick="document.location='harrypotter.html'">Check it out!</button>
@@ -78,7 +78,7 @@
     <img src="media/bookshop-5093170_1920.png" class="card-img-top" alt="Suggested Reading">
     <div class="card-body">
       <h5 class="bookTitle">Suggested Reading</h5>
-      <p class="card-text">Follow on from Harry Potter with my favourite fictional series to date.</p>
+      <p class="description">Follow on from Harry Potter with my favourite fictional series to date.</p>
     </div>
     <div class="card-footer">
       <button class="addbtn" onclick="document.location='suggested-reading.html'">Check it out!</button>
@@ -92,5 +92,4 @@
 <br>
   <footer class="footer">
   </footer>
-<script type="module" src="index.js"></script>
 </body>
