--- a/javascript/quiz-along/index.html
+++ b/javascript/quiz-along/index.html
@@ -9,9 +9,11 @@
 <body>
     <div class="container">
         <div id="home" class="flex-center flex-column">
-            <h1 id="quizHome">Quick Quiz!</h1>
-            <a class="btn" href="/game.html">Play</a>
-            <a class="btn" href="/highscores.html">High Scores</a>
+            <h3>The Affirmed Visionary</h3>
+            <h4>A simple quiz made from lessons in Javascript and the api workshop</h4>
+            <h1 id="quizHome">General Knowledge!</h1>
+            <a class="btn" href="game.html">Play</a>
+            <a class="btn" href="highscores.html">High Scores</a>
         </div>
     </div>
 </body>
