--- a/html/bookshop/suggested-reading.html
+++ b/html/bookshop/suggested-reading.html
@@ -96,7 +96,19 @@
  
   </main>  
   <br>
-  <footer class="footer">
     <button class="addbtn" onclick="document.location='index.html'">Front Cover!</button>
-  </footer>
 </body>
+<hr>
+<footer>
+<h3>Project Links</h3>
+<div class="projectLinks">
+  <a href="/index.html">Contents Page</a>
+  <a href="/html/portfolio/index.html">Personal Profile</a>
+    <a href="/html/bookshop/index.html">Book Shop</a>
+    <a href="/javascript/quiz-along/index.html">Simple Quiz</a>
+    <a href="/react-and-react-native/mybookcase2/public/index.html">My Bookcase</a>
+</div>
+<p class="copyright">Charlene Grant 2020</p>
+</footer>
+
+</html>
