--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -222,7 +222,7 @@
               <li class="socialButtons">
                 <div class="twitter">
                   <a href="https://twitter.com/bdcv_org/">
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                   <i class="fa fa-twitter" aria-hidden="true"></i>
                   </a>
                 </div>
                 <span>Twitter</span>
@@ -301,20 +301,18 @@
             </ul>
           </section>
     </div>
-
-    <div id="footer">
-        <div class="linkSection">
-            <div class="formContainer">
-
-            </div>
-            <div class="gitContainer">
-
-            </div>
-        </div>
-        <p class="copyright">
-
-        </p>
-    </div>
 <script src="index.js"></script>
 </body>
+<hr>
+<footer>
+  <h3>Project Links</h3>
+  <div class="projectLinks">
+      <a href="/index.html">Contents Page</a>
+      <a href="/html/portfolio/index.html">Personal Profile</a>
+      <a href="/html/bookshop/index.html">Book Shop</a>
+      <a href="/javascript/quiz-along/index.html">Simple Quiz</a>
+      <a href="/react-and-react-native/mybookcase2/public/index.html">My Bookcase</a>
+  </div>
+  <p class="copyright">Charlene Grant 2020</p>
+</footer>
 </html>
