Trial link correction

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </thead>
           <tbody>
           <tr>
-              <td><a href="/html/portfolio/index.html">Personal Profile</a></td>
+              <td><a href="https://affirmedvisionary.github.io/blackcodher-bootcamp/html/portfolio/index.html">Personal Profile</a></td>
               <td>HTML and CSS</td>
               <td>Our first project was to create a portfolio type site on a topic of our choice</td>
           </tr>
