trial contents link

--- a/html/bookshop/suggested-reading.html
+++ b/html/bookshop/suggested-reading.html
@@ -102,6 +102,8 @@
 <footer>
   <h3><u>Project Links</u></h3>
   <div class="projectLinks">
+      <a href="/index.html">Home1</a>
+      <a href="/blackcodher-bootcamp/index.html">Home2</a>
       <a href="/blackcodher-bootcamp/html/portfolio/index.html">Personal Profile</a>
       <a href="/blackcodher-bootcamp/html/bookshop/index.html">Book Shop</a>
       <a href="/blackcodher-bootcamp/javascript/quiz-along/index.html">Simple Quiz</a>
