Added Back to contents link on all html pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <h3>This portfolio was put together by Charlene Grant</h3>
           <p>During my time on the Black Codher Bootcamp, we were assigned a number of projects along the way and my interpretation of them can be found here.</p>
             <p>To Navigate through them you can use the contents table below and the links in the footer of each page.</p>
-        <a href="/" class="aboutButton">
+        <a href="https://www.linkedin.com/in/affirmedvisionary/" class="aboutButton">
             <button class="aboutButton">Contact Me</button>
         </a>
       </div>
