--- a/javascript/quiz-along/game.html
+++ b/javascript/quiz-along/game.html
@@ -56,6 +56,7 @@
 <footer>
   <h3><u>Project Links</u></h3>
   <div class="projectLinks">
+      <a href="/blackcodher-bootcamp">Contents</a>
       <a href="/blackcodher-bootcamp/html/portfolio/index.html">Personal Profile</a>
       <a href="/blackcodher-bootcamp/html/bookshop/index.html">Book Shop</a>
       <a href="/blackcodher-bootcamp/javascript/quiz-along/index.html">Simple Quiz</a>
