moved anchor tag

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <tbody>
           <tr>
               <td><a href="/blackcodher-bootcamp/html/portfolio/index.html">Personal Profile</a></td>
-              <td><a href="https://github.com/AffirmedVisionary/blackcodher-bootcamp/tree/master/html/portfolio"></a>Personal Profile</td>
+              <td><a href="https://github.com/AffirmedVisionary/blackcodher-bootcamp/tree/master/html/portfolio">Personal Profile</a></td>
               <td>HTML and CSS</td>
               <td>Our first project was to create a portfolio type site on a topic of our choice</td>
           </tr>
