--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <td>This project came at the end of our JavaScript module and incorporated all learning to date and some independent learning</td>
         </tr>
         <tr>
-            <td><a href="/blackcodher-bootcamp/react-and-react-native/mybookcase2/public/index.html">My Bookcase</a></td>
+            <td><a href="/blackcodher-bootcamp/react-and-react-native/mybookcase2">My Bookcase</a></td>
             <td><a href="https://github.com/AffirmedVisionary/blackcodher-bootcamp/tree/master/react-and-react-native/mybookcase2">My Bookcase</a></td>
             <td>HTML and CSS and React</td>
             <td>Using React we created an interactive one page site using modules. This project really highlighted the possibilities of front end programming for me.</td>
@@ -63,7 +63,7 @@
         <a href="/blackcodher-bootcamp/html/portfolio/index.html">Personal Profile</a>
         <a href="/blackcodher-bootcamp/html/bookshop/index.html">Book Shop</a>
         <a href="/blackcodher-bootcamp/javascript/quiz-along/index.html">Simple Quiz</a>
-        <a href="/blackcodher-bootcamp/react-and-react-native/mybookcase2/public/index.html">My Bookcase</a>
+        <a href="/blackcodher-bootcamp/react-and-react-native/mybookcase2">My Bookcase</a>
     </div>
     <p class="copyright"><a href="mailto:iam@charlenegrant.co.uk">Charlene Grant</a> 2020</p>
 </footer>
