--- a/html/bookshop/harrypotter.html
+++ b/html/bookshop/harrypotter.html
@@ -146,12 +146,12 @@
 <footer>
   <h3><u>Project Links</u></h3>
   <div class="projectLinks">
-      <a href="/blackcodher-bootcamp">Contents</a>
-      <a href="/blackcodher-bootcamp/html/portfolio/index.html">Personal Profile</a>
-      <a href="/blackcodher-bootcamp/html/bookshop/index.html">Book Shop</a>
-      <a href="/blackcodher-bootcamp/javascript/quiz-along/index.html">Simple Quiz</a>
-      <a href="/blackcodher-bootcamp/react-and-react-native/mybookcase2/public/index.html">My Bookcase</a>
-  </div>
+    <a href="https://affirmedvisionary.github.io/blackcodher-bootcamp/">Contents</a>
+    <a href="https://affirmedvisionary.github.io/blackcodher-bootcamp/html/portfolio/index.html">Personal Profile</a>
+    <a href="https://affirmedvisionary.github.io/blackcodher-bootcamp/html/bookshop/index.html">Book Shop</a>
+    <a href="https://affirmedvisionary.github.io/blackcodher-bootcamp/javascript/quiz-along/index.html">Simple Quiz</a>
+    <a href="https://affirmedvisionary.github.io/blackcodher-react-mybookcase2/">My Bookcase</a>
+</div>
   <p class="copyright"><a href="mailto:iam@charlenegrant.co.uk">Charlene Grant</a> 2020</p>
 </footer>
 
