--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
           </thead>
           <tbody>
           <tr>
-              <td><a href="/blackcodher-bootcamp/html/portfolio/index.html">Personal Profile</a></td>
+              <td><a href="https://affirmedvisionary.github.io/blackcodher-bootcamp/html/portfolio/index.html">Personal Profile</a></td>
               <td><a href="https://github.com/AffirmedVisionary/blackcodher-bootcamp/tree/master/html/portfolio">Personal Profile</a></td>
               <td>HTML and CSS</td>
               <td>Our first project was to create a portfolio type site on a topic of our choice</td>
           </tr>
           <tr>
-            <td><a href="/blackcodher-bootcamp/html/bookshop/index.html">Book Shop</a></td>
+            <td><a href="https://affirmedvisionary.github.io/blackcodher-bootcamp/html/bookshop/index.html">Book Shop</a></td>
             <td><a href="https://github.com/AffirmedVisionary/blackcodher-bootcamp/tree/master/html/bookshop">Book Shop</a></td>
             <td>HTML and CSS with JavaScript</td>
             <td>The Bookshop started with HTML and CSS which you can see on the Harry Potter page, we learnt to use bootstrap which was introduced on the suggested reading page and lastly the Amazon Wishlist page uses arrays and javascript knowledge. I really enjoyed the progression of this project</td>
         </tr>
         <tr>
-            <td><a href="/blackcodher-bootcamp/javascript/quiz-along/index.html">Simple Quiz</a></td>
+            <td><a href="https://affirmedvisionary.github.io/blackcodher-bootcamp/javascript/quiz-along/index.html">Simple Quiz</a></td>
             <td><a href="https://github.com/AffirmedVisionary/blackcodher-bootcamp/tree/master/javascript/quiz-along">Simple Quiz</a></td>
             <td>HTML and CSS and JavaScript</td>
             <td>This project came at the end of our JavaScript module and incorporated all learning to date and some independent learning</td>
         </tr>
         <tr>
-            <td><a href="/blackcodher-bootcamp/react-and-react-native/mybookcase2">My Bookcase</a></td>
-            <td><a href="https://github.com/AffirmedVisionary/blackcodher-bootcamp/tree/master/react-and-react-native/mybookcase2">My Bookcase</a></td>
+            <td><a href="https://affirmedvisionary.github.io/blackcodher-react-mybookcase2/">My Bookcase</a></td>
+            <td><a href="https://github.com/AffirmedVisionary/blackcodher-react-mybookcase2">My Bookcase</a></td>
             <td>HTML and CSS and React</td>
             <td>Using React we created an interactive one page site using modules. This project really highlighted the possibilities of front end programming for me.</td>
         </tr>
@@ -60,10 +60,11 @@
 <footer>
     <h3><u>Project Links</u></h3>
     <div class="projectLinks">
-        <a href="/blackcodher-bootcamp/html/portfolio/index.html">Personal Profile</a>
-        <a href="/blackcodher-bootcamp/html/bookshop/index.html">Book Shop</a>
-        <a href="/blackcodher-bootcamp/javascript/quiz-along/index.html">Simple Quiz</a>
-        <a href="/blackcodher-bootcamp/react-and-react-native/mybookcase2">My Bookcase</a>
+        <a href="https://affirmedvisionary.github.io/blackcodher-bootcamp/">Contents</a>
+        <a href="https://affirmedvisionary.github.io/blackcodher-bootcamp/html/portfolio/index.html">Personal Profile</a>
+        <a href="https://affirmedvisionary.github.io/blackcodher-bootcamp/html/bookshop/index.html">Book Shop</a>
+        <a href="https://affirmedvisionary.github.io/blackcodher-bootcamp/javascript/quiz-along/index.html">Simple Quiz</a>
+        <a href="https://affirmedvisionary.github.io/blackcodher-react-mybookcase2/">My Bookcase</a>
     </div>
     <p class="copyright"><a href="mailto:iam@charlenegrant.co.uk">Charlene Grant</a> 2020</p>
 </footer>
