--- a/nodeJS/crud-profile-api/index.htm
+++ b/nodeJS/crud-profile-api/index.htm
@@ -109,7 +109,7 @@
           </p>
         </li>
         <li>
-          <h2><span class="todo"></span><span class="delete">DELETE</span><a href="./api/profiles">/api/profiles/:id</a></h2>
+          <h2><span class="done"></span><span class="delete">DELETE</span><a href="./api/profiles">/api/profiles/:id</a></h2>
           <p>Delete profile by Id.
             <br/>
             <em>N.B. Will need an API tester such as Postman to check DELETE request.</em>
