added PUT feature

--- a/nodeJS/crud-profile-api/index.htm
+++ b/nodeJS/crud-profile-api/index.htm
@@ -91,7 +91,7 @@
           </p>
         </li>
         <li>
-          <h2><span class="todo"></span><span class="put">PUT</span><a href="./api/profiles">/api/profiles/:id</a></h2>
+          <h2><span class="done"></span><span class="put">PUT</span><a href="./api/profiles">/api/profiles/:id</a></h2>
           <p>Replaces an existing profile object. Will display the list of profiles including the changed object.
             <br/>
             Profile must be valid JSON object,e.g:<br/>
