--- a/nodeJS/crud-profile-api/index.htm
+++ b/nodeJS/crud-profile-api/index.htm
@@ -100,7 +100,7 @@
           </p>
         </li>
         <li>
-          <h2><span class="todo"></span><span class="patch">PATCH</span><a href="./api/profiles">/api/profiles/:id</a></h2>
+          <h2><span class="done"></span><span class="patch">PATCH</span><a href="./api/profiles">/api/profiles/:id</a></h2>
           <p>Updates an existing profile object. Will display the list of profiles including the updated object. Ignores new object attributes.
             <br/>
             Profile must be valid JSON object,e.g:<br/>
