--- a/nodeJS/crud-profile-api/index.htm
+++ b/nodeJS/crud-profile-api/index.htm
@@ -29,7 +29,7 @@
       margin-top:0px;
     }
     a, a:visited  {
-      color:orange;
+      color: #ffcc66;
       text-decoration: none;
     }
     h2 span{
@@ -37,21 +37,6 @@
       padding-right: 5px;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
-    /* h2 span.get{
-      color:green;
-    }
-    h2 span.post{
-      color:#cc0000;
-    }
-    h2 span.put{
-      color:rgb(255, 238, 0);
-    }
-    h2 span.patch{
-      color:rgb(0, 140, 255);
-    }
-    h2 span.delete{
-      color:rgb(179, 0, 211);
-    } */
     .done:before{
       content: '\2713';
       color:green;
@@ -67,7 +52,7 @@
   <div class="container">
     <h1>Welcome to Affirmed Visionary's API</h1>
     <p>This page contains some simple ways to get information from a profile file store.</p>
-    <img src="/black-codher-logo.png" alt="Black CodHer Logo"/>
+    <img src="/myWatermark.png" alt="Affirmed Visionary Logo"/>
       <ol style="text-align:initial">
         <li>
           <h2><span class="done"></span><span class="get">GET</span><a href="./">/</a></h2>
@@ -111,7 +96,7 @@
         <li>
           <h2><span class="done"></span><span class="delete">DELETE</span><a href="./api/profiles">/api/profiles/:id</a></h2>
           <p>Delete profile by Id.
-            <br/>
+            <br/><br/>
             <em>N.B. Will need an API tester such as Postman to check DELETE request.</em>
           </p>
         </li>
